<resources>
    <string name="facebook_app_id">1089018964447799</string>
    <string name="google_key">AIzaSyBuxjdaFTHMMfNNhoLr2nHG6uaLfIG7_2A</string>
    <string name="app_name">TramitesUY</string>
    <string name="load_notification_tittle">Carga finalizada</string>
    <string name="load_notification_text_success">Se ha finalizado de cargar los trámites con éxito</string>
    <string name="load_notification_text_failure">Error al intentar realizar la carga de los trámites</string>
    <string name="open_drawer_description">Abrir</string>
    <string name="close_drawer_description">Cerrar</string>
    <string name="search_proceeding">Buscar</string>
    <string name="logout">Cerrar sesión</string>

    <!--LoginFragment-->
    <string name="login_error">Error al intentar iniciar sesión</string>
    <string name="no_thanks">No gracias</string>
    <!--ProceedingTabs-->
    <string name="details">Detalles</string>
    <string name="map">Mapa</string>
    <!--ProceedingDetailsFragment-->
    <string name="proceeding_description">Descripción</string>
    <string name="proceeding_dependence">Dependencia</string>
    <string name="proceeding_requirements">Requerimientos</string>
    <string name="proceeding_url">Url</string>
    <string name="proceeding_status">Estado</string>
    <string name="proceeding_category">Categoría</string>
    <string name="proceeding_when_and_where">Cuando y donde</string>
    <string name="no_locations">No se encontraron lugares donde realizar el tramite</string>
    <string name="loading_locations">Cargando localidades, por favor espere.</string>
</resources>
